# exercise

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  rustfmt.toml  settings.gradle
Codewars/: CMakeLists.txt  Cargo.toml
Codewars/2 kyu/Decode the Morse code, for real/: README.md  k-means.cc  main.cc
Codewars/3 kyu/Make a spiral/: README.md  main.rs  sim.rs
Codewars/4 kyu/Decode the Morse code, advanced/: README.md  main.rs
Codewars/5 kyu/Direction Reduction/: README.md  main.rs
Codewars/5 kyu/Gap in Primes/: README.md  main.rs
Codewars/5 kyu/Molecule to atoms/: README.md  main.rs
Codewars/5 kyu/Perimeter of squares in a rectangle/: README.md  main.rs
Codewars/5 kyu/int32 to IPv4/: README.md  main.rs
Codewars/6 kyu/Counting Duplicates/: README.md  main.rs
Codewars/6 kyu/Find the odd int/: README.md  main.cc
Codewars/6 kyu/Give me a Diamond/: README.md  main.rs
Codewars/6 kyu/Make the Deadfish swim/: main.rs
Codewars/6 kyu/Persistent Bugger./: README.md  main.rs
Codewars/6 kyu/Positions Average/: README.md  main.rs
Codewars/6 kyu/Sort the odd/: README.md  main.rs
Codewars/6 kyu/Street Fighter 2 - Character Selection/: README.md  main.rs
Codewars/6 kyu/Which are in?/: README.md  main.rs
Codewars/7 kyu/Disemvowel Trolls/: README.md  main.rs
Compilers - Principles, Techniques, and Tools/: README.md  build.gradle
Compilers - Principles, Techniques, and Tools/Chapter 1: Introduction/1.1 Language Processors/: 3.md  5.md
Compilers - Principles, Techniques, and Tools/Chapter 1: Introduction/1.6 Programming Language Basics/: 4.md
Compilers - Principles, Techniques, and Tools/Chapter 1: Introduction/1.6 Programming Language Basics/Exercise 1.6.3/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.2 Syntax Definition/: 1.md  6.bnf
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.2 Syntax Definition/Exercise 2.2.2/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.2 Syntax Definition/Exercise 2.2.4/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.2 Syntax Definition/Exercise 2.2.5/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.2 Syntax Definition/Exercise 2.2.6/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.3 Syntax-Directed Translation/Exercise 2.3.3/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.4 Parsing/Exercise 2.4.1/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.6 Lexical Analyzer/Exercise 2.6.1/: Main.java  README.md  Token.java
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.6 Lexical Analyzer/Exercise 2.6.2/: Main.java  README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.6 Lexical Analyzer/Exercise 2.6.3/: Main.java  README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.8 Intermediate Code Generation/Exercise 2.8.1/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.8 Intermediate Code Generation/Exercise 2.8.2/: README.md
Compilers - Principles, Techniques, and Tools/Chapter 3: Lexical Analysis/3.4 Transition Diagrams/: Aho-Corasick.cc  Knuth-Morris-Pratt.cc
Compilers: Principles, Techniques, and Tools/Chapter 1: Introduction/1.1 Language Processors/: 1.md  2.md  4.md
Compilers: Principles, Techniques, and Tools/Chapter 1: Introduction/1.3 The Evolution of Programming Languages/: 1.md
Compilers: Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.2 Syntax Definition/: 2.md  3.md  4.bnf
Compilers: Principles, Techniques, and Tools/Chapter 2: A Simple Syntax-Directed Translator/2.3 Syntax-Directed Translation/: 1.md  2.md  5.md
Compilers׃ Principles, Techniques, and Tools/: README.md
Project Euler/: Cargo.toml
Project Euler/1/: README.md  main.rs
Project Euler/10/: README.md  main.rs
Project Euler/11/: README.md  main.rs
Project Euler/12/: README.md  main.rs
Project Euler/13/: main.rs
Project Euler/14/: main.rs
Project Euler/15/: main.rs
Project Euler/16/: main.rs
Project Euler/17/: README.md  main.rs
Project Euler/17/p17/: main.rs
Project Euler/18/: main.rs
Project Euler/19/: main.rs
Project Euler/2/: main.rs
Project Euler/20/: README.md  main.rs
Project Euler/21/: README.md  main.rs
Project Euler/22/: main.rs
Project Euler/23/: main.rs
Project Euler/24/: main.rs
Project Euler/25/: README.md  main.rs
Project Euler/26/: main.rs
Project Euler/27/: main.rs
Project Euler/28/: main.rs
Project Euler/29/: README.md  main.rs
Project Euler/3/: README.md  main.rs
Project Euler/30/: main.rs
Project Euler/31/: main.rs
Project Euler/32/: README.md  main.rs
Project Euler/33/: README.md  main.rs
Project Euler/34/: README.md  main.rs
Project Euler/35/: README.md  main.rs
Project Euler/36/: README.md  main.rs
Project Euler/37/: README.md  main.rs
Project Euler/38/: README.md  main.rs
Project Euler/39/: README.md  main.rs
Project Euler/4/: README.md  main.rs
Project Euler/40/: README.md  main.rs
Project Euler/41/: README.md  main.rs
Project Euler/42/: README.md  main.rs
Project Euler/43/: README.md  main.rs
Project Euler/5/: README.md  main.rs
Project Euler/6/: README.md  main.rs
Project Euler/7/: README.md  main.rs
Project Euler/8/: README.md  main.rs
Project Euler/80/: README.md  main.rs
Project Euler/9/: README.md  main.rs
algorithm/: lib.rs
algorithm/number-theory/: mod.rs  sieve.rs
洛谷/P3375/: README.md  main.cc
洛谷/P3796/: README.md  main.cc
洛谷/P5357/: README.md  main.cc
(+67 files in other folders)
