cargo-features = ["edition2021"]

bin = [
  # 7 kyu
  { name = "disemvowel-trolls", path = "7 kyu/Disemvowel Trolls/main.rs"},
  # 6 kyu
  { name = "counting-duplicates", path = "6 kyu/Counting Duplicates/main.rs"},
  { name = "give-me-a-diamond", path = "6 kyu/Give me a Diamond/main.rs"},
  { name = "make-the-deadfish-swim", path = "6 kyu/Make the Deadfish swim/main.rs"},
  { name = "persistent-bugger", path = "6 kyu/Persistent Bugger./main.rs"},
  { name = "positions-average", path = "6 kyu/Positions Average/main.rs"},
  { name = "sort-the-odd", path = "6 kyu/Sort the odd/main.rs"},
  { name = "street-fighter-2-character-selection", path = "6 kyu/Street Fighter 2 - Character Selection/main.rs"},
  { name = "which-are-in", path = "6 kyu/Which are in?/main.rs"},
  # 5 kyu
  { name = "direction-reduction", path = "5 kyu/Direction Reduction/main.rs"},
  { name = "gap-in-primes", path = "5 kyu/Gap in Primes/main.rs"},
  { name = "int32-to-ipv4", path = "5 kyu/int32 to IPv4/main.rs"},
  { name = "molecule-to-atoms", path = "5 kyu/Molecule to atoms/main.rs"},
  { name = "perimeter-of-squares-in-a-rectangle", path = "5 kyu/Perimeter of squares in a rectangle/main.rs"},
  # 4 kyu
  { name = "decode-the-morse-code-advanced", path = "4 kyu/Decode the Morse code, advanced/main.rs"}
]

[package]
name = "Codewars"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.42"
float_eq = "^0.6.0"
lazy_static = "^1.4.0"
itertools = "^0.10.1"
num = "^0.4.0"
regex = "^1.5.4"
thiserror = "^1.0.26"
