bin = [
  {name = "1", path = "1/main.rs"},   {name = "2", path = "2/main.rs"},   {name = "3", path = "3/main.rs"},   {name = "4", path = "4/main.rs"},   {name = "5", path = "5/main.rs"},
  {name = "6", path = "6/main.rs"},   {name = "7", path = "7/main.rs"},   {name = "8", path = "8/main.rs"},   {name = "9", path = "9/main.rs"},   {name = "10", path = "10/main.rs"},
  {name = "11", path = "11/main.rs"}, {name = "12", path = "12/main.rs"}, {name = "13", path = "13/main.rs"}, {name = "14", path = "14/main.rs"}, {name = "15", path = "15/main.rs"},
  {name = "16", path = "16/main.rs"}, {name = "17", path = "17/main.rs"}, {name = "18", path = "18/main.rs"}, {name = "19", path = "19/main.rs"}, {name = "20", path = "20/main.rs"},
  {name = "21", path = "21/main.rs"}, {name = "22", path = "22/main.rs"}, {name = "23", path = "23/main.rs"}, {name = "24", path = "24/main.rs"}, {name = "25", path = "25/main.rs"},
  {name = "26", path = "26/main.rs"}, {name = "27", path = "27/main.rs"}, {name = "28", path = "28/main.rs"}, {name = "29", path = "29/main.rs"}, {name = "30", path = "30/main.rs"},
  {name = "31", path = "31/main.rs"}, {name = "32", path = "32/main.rs"}, {name = "33", path = "33/main.rs"}, {name = "34", path = "34/main.rs"}, {name = "35", path = "35/main.rs"},
  {name = "36", path = "36/main.rs"}, {name = "37", path = "37/main.rs"}, {name = "38", path = "38/main.rs"}, {name = "39", path = "39/main.rs"}, {name = "40", path = "40/main.rs"},
  {name = "41", path = "41/main.rs"}, {name = "42", path = "42/main.rs"}, {name = "43", path = "43/main.rs"},
  {name = "80", path = "80/main.rs"},
]

[package]
name = "ProjectEuler"
version = "0.1.0"
edition = "2021"

[dependencies]
bit-set = { version = "0" }
chrono = { version = "0" }
csv = { version = "1" }
itertools = { version = "0.13" }
english-numbers = { version = "0.3" }
num = { version = "0.4" }
timeit = { version = "0.1" }

exercise = { path = "../" }
